shrinknav on both pages

--- a/hero.html
+++ b/hero.html
@@ -1,46 +1,36 @@
 <!doctype html>
 <html class="no-js" lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sloot Webdesign</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i|Oswald:200,300,400,500,600,700" rel="stylesheet">
-    <link rel="stylesheet" href="css/foundation.css">
-    <link rel="stylesheet" href="css/app.css">
-  </head>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Image Magnifique</title>
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i|Oswald:200,300,400,500,600,700" rel="stylesheet">
+        <link rel="stylesheet" href="css/foundation.css">
+        <link rel="stylesheet" href="css/app.css">
+    </head>
   <body>
 
-        <div class="hero-full-screen">
-
-                <div class="top-content-section">
-                  <div class="top-bar">
-                    <div class="top-bar-left">
-                      <ul class="menu">
-                        <li class="menu-text"><img src="http://placehold.it/75x30" alt="logo"></li>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="hero.html">Hero page</a></li>
-                        <li><a href="hero-curtain.html">hero curtain page</a></li>
-                        <li><a href="#">Contact</a></li>
-                      </ul>
-                    </div>
-                  </div>
+        <div class="title-bar">
+                <div class="title-bar-left">
+                  <span class="title-bar-title">Image Magnifique</span>
                 </div>
-
-                <div class="middle-content-section">
-                  <h1>Super Compelling Headline</h1>
-                  <button class="button large">Button</button>
-                  <button class="button large">Button</button>
-                </div>
-
-                <div class="bottom-content-section" data-magellan data-threshold="0">
-                  <a href="#main-content-section"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M24 12c0-6.627-5.373-12-12-12s-12 5.373-12 12 5.373 12 12 12 12-5.373 12-12zm-18.005-1.568l1.415-1.414 4.59 4.574 4.579-4.574 1.416 1.414-5.995 5.988-6.005-5.988z"/></svg></a>
-                </div>
-
+                <!-- <div class="title-bar-right">
+                  <button class="menu-icon" type="button" data-toggle="navmenu"></button>
+                </div> -->
               </div>
 
-              <div id="main-content-section" data-magellan-target="main-content-section">
-                <!-- your content goes here -->
+
+        <header class="sticky-shrinknav-header" data-interchange="[img/Stad01Def.jpg, small], [img/Stad01Def.jpg, medium], [img/Stad01Def.jpg, large]" alt="illustration">
+
+            <h1 class="sticky-shrinknav-header-title">Smashing first impressions</h1>
+            <ul class="menu align-center sticky-shrinknav-menu" id="navmenu" data-toggler="" >
+                <li><a href="index.html">Home</a></li>
+                <li><a href="hero.html" active>Gallery</a></li>
+                <!-- <li><a href="hero-curtain.html">hero curtain page</a></li> -->
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </header>
 
                 <div class="grid-container">
                         <!-- <div class="grid-y large-grid-frame"> -->
@@ -48,13 +38,16 @@
 
 
                             <div class="grid-x">
-                                    <div class="cell  intro">
-                                            <h1 >You have only one chance</h1>
+                                    <div class="cell  " style="position: relative">
+
+                                            <h1 style="font-size: 65vw" >BIG</h1>
+                                            <h1 style="font-size: 2vw" >or small</h1>
+                                            <h1 style="font-size: 25vw" >images</h1>
                                     </div>
 
 
-                                    <div class="large-12 cell intro big-image">
-                                        <h2>to make a first impression</h2>
+                                    <div class="large-12 cell intro">
+                                        <h2 style="font-size: 20vw">gallery</h2>
 
                                             <noscript><img src="img/Stad01Def.jpg"></noscript>
 
