--- a/index.html
+++ b/index.html
@@ -11,27 +11,114 @@
   </head>
   <body>
 
-        <div class="title-bar ">
+        <!-- <div class="title-bar ">
                 <div class="title-bar-left">
                   <span class="title-bar-title">Image Magnifique</span>
-                </div>
+                </div> -->
                 <!-- <div class="title-bar-right">
                   <button class="menu-icon" type="button" data-toggle="navmenu"></button>
                 </div> -->
+        <!-- </div> -->
+
+
+ <!-- Responsive Sticky Menu -->
+
+        <div data-sticky-container>
+            <div data-sticky data-options="marginTop:0;">
+
+              <div class="title-bar" data-responsive-toggle="example-menu" data-hide-for="medium">
+                <button class="menu-icon" type="button" data-toggle="example-menu"></button>
+                <div class="title-bar-title">Menu</div>
               </div>
 
+              <div class="top-bar" id="example-menu">
+                <ul class="vertical medium-horizontal dropdown menu" data-responsive-menu="accordion medium-dropdown">
+                  <li class="menu-text">Image Magnifiq</li>
+                  <li>
+                    <a href="#">One</a>
+                    <ul class="menu vertical nested">
+                      <li><a href="#">One</a></li>
+                      <li><a href="#">Two</a></li>
+                      <li><a href="#">Three</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Two</a></li>
+                  <li><a href="#">Three</a></li>
+                </ul>
+              </div>
 
-        <header class="sticky-shrinknav-header" data-interchange="[img/Stad01Def.jpg, small], [img/Stad01Def.jpg, medium], [img/Stad01Def.jpg, large]" alt="illustration">
+            </div>
+          </div>
+
+
+ <!-- end Responsive Sticky Menu -->
+
+        <!--  clean hero slider  -->
+
+        <div class="orbit clean-hero-slider" role="region" aria-label="Favorite Space Pictures" data-orbit>
+            <div class="orbit-wrapper">
+              <div class="orbit-controls">
+                <button class="orbit-previous"><span class="show-for-sr">Previous Slide</span>&#9664;&#xFE0E;</button>
+                <button class="orbit-next"><span class="show-for-sr">Next Slide</span>&#9654;&#xFE0E;</button>
+              </div>
+              <ul class="orbit-container">
+                <li class="orbit-slide">
+                  <figure class="orbit-figure">
+                    <img class="orbit-image" src="img/Stad01Def.jpg" alt="image alt text">
+                    <figcaption class="orbit-caption">
+                      <h3>Lorem Ipsum Etiam</h3>
+                      <p>Etiam porta sem malesuada magna mollis euismod. Vestibulum id ligula porta felis euismod semper.</p>
+                      <a href="#" class="button yellow">Mattis Elit</a>
+                    </figcaption>
+                  </figure>
+                </li>
+                <li class="orbit-slide">
+                  <figure class="orbit-figure">
+                    <img class="orbit-image" src="img/Stad2.jpg" alt="image alt text">
+                    <figcaption class="orbit-caption">
+                      <h3>Ipsum Ornare Ultricies</h3>
+                      <p>Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor fringilla. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                      <a href="#" class="button yellow">Egestas Amet</a>
+                    </figcaption>
+                  </figure>
+                </li>
+                <li class="orbit-slide">
+                  <figure class="orbit-figure">
+                    <img class="orbit-image" src="img/stad.jpg" alt="image alt text">
+                    <figcaption class="orbit-caption">
+                      <h3>Malesuada Parturient</h3>
+                      <p>Fusce dapibus, tellus ac cursus commodo, sit amet risus. Cras mattis consectetur purus sit amet fermentum. Maecenas sed diam sit amet non magna.</p>
+                      <a href="#" class="button yellow">Sollicitudin</a>
+                    </figcaption>
+                  </figure>
+                </li>
+              </ul>
+            </div>
+            <nav class="orbit-bullets">
+              <button class="is-active" data-slide="1"><span class="show-for-sr">Lorem Ipsum Etiam</span></button>
+              <button data-slide="2"><span class="show-for-sr">Lorem Ipsum Etiam</span></button>
+              <button data-slide="3"><span class="show-for-sr">Lorem Ipsum Etiam</span></button>
+            </nav>
+          </div>
+
+           <!-- end clean hero slider  -->
+
+
+
+              <!-- https://foundation.zurb.com/building-blocks/blocks/sticky-shrinknav.html -->
+        <!-- <header class="sticky-shrinknav-header" data-interchange="[img/Stad01Def.jpg, small], [img/Stad01Def.jpg, medium], [img/Stad01Def.jpg, large]" alt="illustration">
 
             <h1 class="sticky-shrinknav-header-title">Smashing First Impressions</h1>
             <ul class="menu align-center sticky-shrinknav-menu" id="navmenu" data-toggler="" >
                 <li><a href="index.html" active>Home</a></li>
                 <li><a href="hero.html">Gallery</a></li>
-                <!-- <li><a href="hero-curtain.html">hero curtain page</a></li> -->
+                <li><a href="hero-curtain.html">hero curtain page</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
-        </header>
+        </header> -->
         <!-- <div data-interchange="[img/stad-sm.jpg, small], [img/Stad01Def.jpg, medium], [img/Stad01Def.jpg, large]" alt="illustration"></div> -->
+
+
 
         <div class="grid-container">
         <!-- <div class="grid-y large-grid-frame"> -->
