styling top bar and caroussel

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Magnifique</title>
+    <title>image magnifique</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i|Oswald:200,300,400,500,600,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cardo:400,400i,700|Pathway+Gothic+One|Roboto+Mono:100,100i,300,300i,400,400i,500,500i,700,700i|Rubik:300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
   </head>
@@ -27,20 +28,17 @@
             <div data-sticky data-options="marginTop:0;">
 
               <div class="title-bar" data-responsive-toggle="example-menu" data-hide-for="medium">
-                <button class="menu-icon" type="button" data-toggle="example-menu"></button>
-                <div class="title-bar-title">Menu</div>
+                    <div class="title-bar-title">image magnifique</div>
+                  <div class="title-bar-right">
+                <button class="menu-icon" type="button" data-toggle="example-menu"></button> </div>
+
               </div>
 
               <div class="top-bar" id="example-menu">
                 <ul class="vertical medium-horizontal dropdown menu" data-responsive-menu="accordion medium-dropdown">
-                  <li class="menu-text">Image Magnifiq</li>
+                  <li class="name show-for-medium" ><a href="#" >image magnifique</a> </li>
                   <li>
                     <a href="#">One</a>
-                    <ul class="menu vertical nested">
-                      <li><a href="#">One</a></li>
-                      <li><a href="#">Two</a></li>
-                      <li><a href="#">Three</a></li>
-                    </ul>
                   </li>
                   <li><a href="#">Two</a></li>
                   <li><a href="#">Three</a></li>
@@ -65,31 +63,31 @@
                 <li class="orbit-slide">
                   <figure class="orbit-figure">
                     <img class="orbit-image" src="img/Stad01Def.jpg" alt="image alt text">
-                    <figcaption class="orbit-caption">
+                    <!-- <figcaption class="orbit-caption">
                       <h3>Lorem Ipsum Etiam</h3>
                       <p>Etiam porta sem malesuada magna mollis euismod. Vestibulum id ligula porta felis euismod semper.</p>
                       <a href="#" class="button yellow">Mattis Elit</a>
-                    </figcaption>
+                    </figcaption> -->
                   </figure>
                 </li>
                 <li class="orbit-slide">
                   <figure class="orbit-figure">
                     <img class="orbit-image" src="img/Stad2.jpg" alt="image alt text">
-                    <figcaption class="orbit-caption">
+                    <!-- <figcaption class="orbit-caption">
                       <h3>Ipsum Ornare Ultricies</h3>
                       <p>Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor fringilla. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                       <a href="#" class="button yellow">Egestas Amet</a>
-                    </figcaption>
+                    </figcaption> -->
                   </figure>
                 </li>
                 <li class="orbit-slide">
                   <figure class="orbit-figure">
                     <img class="orbit-image" src="img/stad.jpg" alt="image alt text">
-                    <figcaption class="orbit-caption">
+                    <!-- <figcaption class="orbit-caption">
                       <h3>Malesuada Parturient</h3>
                       <p>Fusce dapibus, tellus ac cursus commodo, sit amet risus. Cras mattis consectetur purus sit amet fermentum. Maecenas sed diam sit amet non magna.</p>
                       <a href="#" class="button yellow">Sollicitudin</a>
-                    </figcaption>
+                    </figcaption> -->
                   </figure>
                 </li>
               </ul>
@@ -127,6 +125,10 @@
                     <!-- hide-for-small-only -->
                     <!-- <h2>We offer:</h2> -->
                     <div class="grid-x grid-padding-x">
+
+                        <div class="small-12 cell tagline" >
+                            <h1 class="">Groot beeld</h1>
+                        </div>
                         <div class="medium-4 cell  ">
                                 <h3 >Web Header Design</h3>
                                 <p class="hide-for-small-only">
