further styling homepage

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>image magnifique</title>
+    <link href="https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i|Oswald:200,300,400,500,600,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Cardo:400,400i,700|Pathway+Gothic+One|Roboto+Mono:100,100i,300,300i,400,400i,500,500i,700,700i|Rubik:300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Cardo:400,400i,700|Pathway+Gothic+One|Roboto+Mono:100,100i,300,300i,400,400i,500,500i,700,700i|Rubik:300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet"> -->
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
   </head>
@@ -36,12 +37,14 @@
 
               <div class="top-bar" id="example-menu">
                 <ul class="vertical medium-horizontal dropdown menu" data-responsive-menu="accordion medium-dropdown">
-                  <li class="name show-for-medium" ><a href="#" >image magnifique</a> </li>
+                  <li class="name show-for-medium" ><a href="#" > <span class=""> image</span> magnifique</a> </li>
                   <li>
-                    <a href="#">One</a>
+                    <a href="#"><span class="extrabold" >Illustraties
+                       </span> </a>
                   </li>
-                  <li><a href="#">Two</a></li>
-                  <li><a href="#">Three</a></li>
+                  <li><a href="#"><span class="italic"> Toepassingen</span></a></li>
+                  <!-- <li><a href="#"></a></li> -->
+                  <li><a href="#"><span class="bold">Contact</span></a></li>
                 </ul>
               </div>
 
@@ -63,102 +66,97 @@
                 <li class="orbit-slide">
                   <figure class="orbit-figure">
                     <img class="orbit-image" src="img/Stad01Def.jpg" alt="image alt text">
-                    <!-- <figcaption class="orbit-caption">
-                      <h3>Lorem Ipsum Etiam</h3>
+                    <figcaption class="orbit-caption">
+                      <h3>Hero Images</h3>
                       <p>Etiam porta sem malesuada magna mollis euismod. Vestibulum id ligula porta felis euismod semper.</p>
-                      <a href="#" class="button yellow">Mattis Elit</a>
-                    </figcaption> -->
+                      <a href="#" class="button yellow">Bekijk voorbeelden</a>
+                    </figcaption>
                   </figure>
                 </li>
                 <li class="orbit-slide">
                   <figure class="orbit-figure">
                     <img class="orbit-image" src="img/Stad2.jpg" alt="image alt text">
-                    <!-- <figcaption class="orbit-caption">
-                      <h3>Ipsum Ornare Ultricies</h3>
-                      <p>Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor fringilla. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                      <a href="#" class="button yellow">Egestas Amet</a>
-                    </figcaption> -->
+                    <figcaption class="orbit-caption">
+                      <h3>Banner images</h3>
+                      <p>Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor fringilla. </p>
+                      <a href="#" class="button yellow">Hoe het werkt</a>
+                    </figcaption>
                   </figure>
                 </li>
                 <li class="orbit-slide">
                   <figure class="orbit-figure">
                     <img class="orbit-image" src="img/stad.jpg" alt="image alt text">
-                    <!-- <figcaption class="orbit-caption">
-                      <h3>Malesuada Parturient</h3>
-                      <p>Fusce dapibus, tellus ac cursus commodo, sit amet risus. Cras mattis consectetur purus sit amet fermentum. Maecenas sed diam sit amet non magna.</p>
-                      <a href="#" class="button yellow">Sollicitudin</a>
-                    </figcaption> -->
+                    <figcaption class="orbit-caption">
+                      <h3>Hero Images</h3>
+                      <p>Fusce dapibus, tellus ac cursus commodo, sit amet risus. Cras mattis consectetur purus sit amet fermentum.</p>
+                      <a href="#" class="button yellow">Bekijk toepassingen</a>
+                    </figcaption>
                   </figure>
                 </li>
               </ul>
             </div>
             <nav class="orbit-bullets">
-              <button class="is-active" data-slide="1"><span class="show-for-sr">Lorem Ipsum Etiam</span></button>
-              <button data-slide="2"><span class="show-for-sr">Lorem Ipsum Etiam</span></button>
-              <button data-slide="3"><span class="show-for-sr">Lorem Ipsum Etiam</span></button>
+              <button class="is-active" data-slide="1"><span class="show-for-sr">illustration 1</span></button>
+              <button data-slide="2"><span class="show-for-sr">illustration 2</span></button>
+              <button data-slide="3"><span class="show-for-sr">illustration 3</span></button>
             </nav>
           </div>
 
            <!-- end clean hero slider  -->
 
 
-
-              <!-- https://foundation.zurb.com/building-blocks/blocks/sticky-shrinknav.html -->
-        <!-- <header class="sticky-shrinknav-header" data-interchange="[img/Stad01Def.jpg, small], [img/Stad01Def.jpg, medium], [img/Stad01Def.jpg, large]" alt="illustration">
-
-            <h1 class="sticky-shrinknav-header-title">Smashing First Impressions</h1>
-            <ul class="menu align-center sticky-shrinknav-menu" id="navmenu" data-toggler="" >
-                <li><a href="index.html" active>Home</a></li>
-                <li><a href="hero.html">Gallery</a></li>
-                <li><a href="hero-curtain.html">hero curtain page</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </header> -->
-        <!-- <div data-interchange="[img/stad-sm.jpg, small], [img/Stad01Def.jpg, medium], [img/Stad01Def.jpg, large]" alt="illustration"></div> -->
-
-
-
         <div class="grid-container">
-        <!-- <div class="grid-y large-grid-frame"> -->
-            <div class="grid-x grid-padding-x  ">
-                <div class="large-12 cell service ">
-                    <!-- hide-for-small-only -->
-                    <!-- <h2>We offer:</h2> -->
+
+            <div class="grid-x grid-padding-x">
+                <div class="large-12 cell tagline">
                     <div class="grid-x grid-padding-x">
+                            <div class="small-12 cell " >
+                                    <!-- <h1>Word uniek</h1> -->
+                                    <!-- <h1 class="">Een <span class="goldenratio"> boost</span><br>voor je website</h1> -->
+                                    <h1>Een bijzondere eerste indruk</h1>
+                                    <p class="hide-for-small-only">Image Magnifique maakt illustraties voor een <span class="italic regular">unieke uitstraling</span> van je website</p>
+                                </div>
+                    </div>
+                </div>
 
-                        <div class="small-12 cell tagline" >
-                            <h1 class="">Groot beeld</h1>
-                        </div>
-                        <div class="medium-4 cell  ">
-                                <h3 >Web Header Design</h3>
-                                <p class="hide-for-small-only">
-                                    <!-- <a href="http://foundation.zurb.com/docs">Foundation Documentation</a><br /> -->
-                                    Redesign of your website's header<br> Large background illustration included </p>
-                        </div>
+                <div class="bottom-content-section" data-magellan data-threshold="0">
+                        <a href="#main-content-section" class="button"><div style="font-weight:bold; margin-bottom:0.5rem">Benieuwd?</div> <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M24 12c0-6.627-5.373-12-12-12s-12 5.373-12 12 5.373 12 12 12 12-5.373 12-12zm-18.005-1.568l1.415-1.414 4.59 4.574 4.579-4.574 1.416 1.414-5.995 5.988-6.005-5.988z"/></svg></a>
+                      </div>
 
-                        <div class="medium-4 cell ">
-                                <h3 >Hero Images</h3>
-                                <p class="hide-for-small-only">
-                                    <!-- <a href="http://foundation.zurb.com/docs">Foundation Documentation</a><br /> -->
-                                    Only a large image <br>
-                                    No redesign</p>
-                        </div>
-                        <div class="medium-4 cell ">
-                            <h3 >Illustrations / Banners</h3>
-                            <p class="hide-for-small-only">Smaller images  <br>
-                            To spice up your website
-                                <!-- <a href="http://foundation.zurb.com/docs">Foundation Documentation</a><br /> -->
-                                </p>
-                        </div>
-                        <div class="bottom-content-section" data-magellan data-threshold="0">
-                                <a href="#main-content-section"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M24 12c0-6.627-5.373-12-12-12s-12 5.373-12 12 5.373 12 12 12 12-5.373 12-12zm-18.005-1.568l1.415-1.414 4.59 4.574 4.579-4.574 1.416 1.414-5.995 5.988-6.005-5.988z"/></svg></a>
-                              </div>
 
-                            </div>
 
-                            <div id="main-content-section" data-magellan-target="main-content-section">
-                              <!-- your content goes here -->
-                            </div>
+
+            </div>
+
+
+            <div  id="main-content-section" data-magellan-target="main-content-section"class="grid-x grid-padding-x  ">
+                <div class="large-12 cell intro ">
+                    <!-- hide-for-small-only -->
+                    <h1>We bieden:</h1>
+                    <div class="grid-x grid-margin-x grid-margin-y">
+
+                                    <div class="medium-4 cell  service ">
+                                            <h3 class="" >Hero Images</h3>
+                                            <p class="">
+
+                                                Grote afbeeldingen in de header </p>
+                                                <a href="#" class="button yellow">Bekijk voorbeelden</a>
+                                    </div>
+
+                                    <div class="medium-4 cell service ">
+                                            <h3 >Banners</h3>
+                                            <p class="">
+
+                                                Zowel groot als klein</p>
+                                                <a href="#" class="button yellow">Bekijk voorbeelden</a>
+                                    </div>
+                                    <div class="medium-4 cell service  ">
+                                        <h3 class="">Kleine illustraties</h3>
+                                        <p class="">Iconen / productafbeeldingen
+
+                                            </p>
+                                            <a href="#" class="button yellow">Bekijk voorbeelden</a>
+                                    </div>
                     </div>
                 </div>
             </div>
@@ -166,7 +164,7 @@
             <div class="grid-x">
 
                     <div id="#main-content-section" data-magellan-target="main-content-section"     class="large-12 cell intro big-image">
-                        <h1>Gallery</h1>
+                        <h1></h1>
 
                             <noscript><img src="img/Stad01Def.jpg"></noscript>
 
