added portfolio and footer; ventana azul color scheme

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i|Oswald:200,300,400,500,600,700" rel="stylesheet">
     <!-- <link href="https://fonts.googleapis.com/css?family=Cardo:400,400i,700|Pathway+Gothic+One|Roboto+Mono:100,100i,300,300i,400,400i,500,500i,700,700i|Rubik:300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet"> -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link rel="stylesheet" href="css/foundation.css">
     <link rel="stylesheet" href="css/app.css">
   </head>
@@ -35,9 +36,9 @@
 
               </div>
 
-              <div class="top-bar" id="example-menu">
-                <ul class="vertical medium-horizontal dropdown menu" data-responsive-menu="accordion medium-dropdown">
-                  <li class="name show-for-medium" ><a href="#" > <span class=""> image</span> magnifique</a> </li>
+              <div class="top-bar align-right" id="example-menu">
+                <ul class="vertical  medium-horizontal dropdown menu align-center" data-responsive-menu="accordion medium-dropdown">
+                  <li class="logo show-for-medium" ><a href="#" > <span class=""> image</span> magnifique</a> </li>
                   <li>
                     <a href="#"><span class="extrabold" >Illustraties
                        </span> </a>
@@ -66,31 +67,31 @@
                 <li class="orbit-slide">
                   <figure class="orbit-figure">
                     <img class="orbit-image" src="img/Stad01Def.jpg" alt="image alt text">
-                    <figcaption class="orbit-caption">
+                    <!-- <figcaption class="orbit-caption">
                       <h3>Hero Images</h3>
                       <p>Etiam porta sem malesuada magna mollis euismod. Vestibulum id ligula porta felis euismod semper.</p>
                       <a href="#" class="button yellow">Bekijk voorbeelden</a>
-                    </figcaption>
+                    </figcaption> -->
                   </figure>
                 </li>
                 <li class="orbit-slide">
                   <figure class="orbit-figure">
                     <img class="orbit-image" src="img/Stad2.jpg" alt="image alt text">
-                    <figcaption class="orbit-caption">
+                    <!-- <figcaption class="orbit-caption">
                       <h3>Banner images</h3>
                       <p>Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor fringilla. </p>
                       <a href="#" class="button yellow">Hoe het werkt</a>
-                    </figcaption>
+                    </figcaption> -->
                   </figure>
                 </li>
                 <li class="orbit-slide">
                   <figure class="orbit-figure">
                     <img class="orbit-image" src="img/stad.jpg" alt="image alt text">
-                    <figcaption class="orbit-caption">
+                    <!-- <figcaption class="orbit-caption">
                       <h3>Hero Images</h3>
                       <p>Fusce dapibus, tellus ac cursus commodo, sit amet risus. Cras mattis consectetur purus sit amet fermentum.</p>
                       <a href="#" class="button yellow">Bekijk toepassingen</a>
-                    </figcaption>
+                    </figcaption> -->
                   </figure>
                 </li>
               </ul>
@@ -100,7 +101,7 @@
               <button data-slide="2"><span class="show-for-sr">illustration 2</span></button>
               <button data-slide="3"><span class="show-for-sr">illustration 3</span></button>
             </nav>
-          </div>
+     </div>
 
            <!-- end clean hero slider  -->
 
@@ -130,9 +131,7 @@
 
 
             <div  id="main-content-section" data-magellan-target="main-content-section"class="grid-x grid-padding-x  ">
-                <div class="large-12 cell intro ">
-                    <!-- hide-for-small-only -->
-                    <h1>We bieden:</h1>
+                <!-- <div class="large-12 cell intro ">                    <h1>We bieden:</h1>
                     <div class="grid-x grid-margin-x grid-margin-y">
 
                                     <div class="medium-4 cell  service ">
@@ -159,11 +158,53 @@
                                     </div>
                     </div>
                 </div>
+            </div> -->
+
+            <div class="portfolio">
+                <div class="masonry-css">
+                    <div class="masonry-css-item">
+                            <img src="img/FilmfabriekDef.jpg" class="" height="" width="" alt="">
+                    </div>
+                    <div class="masonry-css-item">
+                            <img src="img/duikboot.jpg" class="" height="" width="" alt="">
+                            </div>
+                    <div class="masonry-css-item">
+                      <img src="img/rijtjeHuizen.jpg" class="" height="" width="100%" alt="">
+                    </div>
+
+                    <div class="masonry-css-item">
+                      <img src="img/Stad01Def.jpg" class="" height="" width="" alt="">
+                    </div>
+                    <div class="masonry-css-item">
+                      <img src="img/BosjesMan02.jpg" class="" height="" width="" alt="">
+                    </div>
+                    <div class="masonry-css-item">
+                      <img src="img/versterker.jpg" class="" height="" width="" alt="">
+                    </div>
+                    <div class="masonry-css-item">
+                            <img src="img/stadinwater.jpg" class="" height="" width="" alt="">
+                          </div>
+
+                    <div class="masonry-css-item">
+                      <img src="img/Motormeisje02.jpg" class="" height="" width="" alt="">
+                    </div>
+
+
+                    <div class="masonry-css-item">
+                      <img src="img/stad.jpg" class="" height="" width="" alt="">
+                    </div>
+                    <div class="masonry-css-item">
+                      <img src="img/Stad2.jpg" class="" height="" width="" alt="">
+                    </div>
+
+                  </div>
+
+
             </div>
 
-            <div class="grid-x">
 
-                    <div id="#main-content-section" data-magellan-target="main-content-section"     class="large-12 cell intro big-image">
+
+                    <!-- <div  class="large-12 cell intro big-image">
                         <h1></h1>
 
                             <noscript><img src="img/Stad01Def.jpg"></noscript>
@@ -171,19 +212,80 @@
                             <img data-interchange="[img/stad-sm.jpg, small], [img/stad.jpg, medium], [img/stad.jpg, large]" alt="illustration stad">
                             <img data-interchange="[img/stad-sm.jpg, small], [img/Stad01Def.jpg, medium], [img/Stad01Def.jpg, large]" alt="illustration" >
 
+                    </div> -->
 
-                    <!-- <img src="img/Stad01Def.jpg" alt="illustration"> -->
 
-                    </div>
 
+
+
+
+
+<footer class="marketing-site-footer">
+        <div class="grid-x">
+          <div class="medium-4 cell">
+            <h4 class="marketing-site-footer-name">Image Magnifique</h4>
+            <p>Wij maken illustraties voor online en offline uitingen. </p>
+            <ul class="menu marketing-site-footer-menu-social simple">
+              <li><a href="#"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
+               <li><a href="#"><i class="fab fa-facebook-square" aria-hidden="true"></i></a></li>
+               <li><a href="#"><i class="fab fa-twitter-square" aria-hidden="true"></i></a></li>
+            </ul>
+          </div>
+          <div class="medium-4 cell">
+             <h4 class="marketing-site-footer-title">Contact Info</h4>
+
+            <div class="marketing-site-footer-block">
+              <i class="fas fa-phone" aria-hidden="true"></i>
+              <p>1 (800) 555-5555</p>
             </div>
-
-            <div class="cell shrink footer light-grey">
-                    <h3 class="text-center">footer Text</h3>
-                    </div>
-
-
+            <div class="marketing-site-footer-block">
+              <i class="fas fa-envelope" aria-hidden="true"></i>
+              <p>yetirules@fakeemail.com</p>
+            </div>
+          </div>
+          <div class="medium-4 cell">
+            <h4 class="marketing-site-footer-title">Instagram</h4>
+            <div class="grid-x">
+              <div class="cell medium-4">
+                <img src="https://placehold.it/75" alt="" />
+              </div>
+              <div class="cell medium-4">
+                <img src="https://placehold.it/75" alt="" />
+              </div>
+              <div class="cell medium-4 ">
+                <img src="https://placehold.it/75" alt="" />
+              </div>
+              <div class="cell medium-4">
+                <img src="https://placehold.it/75" alt="" />
+              </div>
+              <div class="cell medium-4">
+                <img src="https://placehold.it/75" alt="" />
+              </div>
+              <div class="cell medium-4">
+                <img src="https://placehold.it/75" alt="" />
+              </div>
+            </div>
+          </div>
         </div>
+        <div class="marketing-site-footer-bottom">
+          <div class="row align-middle">
+            <div class="cell">
+              <p>&copy; 2018 image magnifique</p>
+            </div>
+            <div class="cell">
+              <ul class="menu marketing-site-footer-bottom-links">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Contact</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </footer>
+
+
+    </div>
 
 
 
